# robot_control

./: CMakeLists.txt  package.xml
include/robot_control/: Controller.h  LocOpenpose.h  ultils.h
recordData/: information.txt  information1.txt  information10.txt  information11.txt  information12.txt  information13.txt  information14.txt  information15.txt  information16.txt  information17.txt  information18.txt  information19.txt  information2.txt  information20.txt  information3.txt  information4.txt  information5.txt  information6.txt  information7.txt  information8.txt  information9.txt  plotInformation.py  records.txt  records19.txt
src/: AngleFollowControl.cc  Controller.cc  FiniteTimeControl.cc  LineFollowControl.cc  LineFollowControl.launch  LocOpenpose.cc  LyPositionControl.cc  MPCFollowControl.cc  MPCTraTrackControl.cc  Trajectory.hpp  control.launch  test.cc  testControl.cc  testMPCControl.cc  ultils.cc
src/mpcbase/: Adaptive.c  Adaptive.h  Adaptive_data.c  Adaptive_private.h  Adaptive_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
